glance/ingress.yml
---
apiVersion: v1
kind: Service
metadata:
  name: glance
  namespace: glance
spec:
  type: ClusterIP

  selector:
    app: glance

  ports:
    - name: http
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glance
  namespace: glance
  annotations:
    cert-manager.io/cluster-issuer: acme-nbl
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - glance.vil.nbl.sh
      secretName: glance-tls
  rules:
    - host: glance.vil.nbl.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glance
                port:
                  number: 80
